TWC3167-XXXX: Kendo combox & Text area : Contract page text area alignment issue, combox fixes in meet comp, end customer pop up, tender folio pop up (#1434)

--- a/Intel.MyDeals/Client/src/app/style/style.css
+++ b/Intel.MyDeals/Client/src/app/style/style.css
@@ -43,3 +43,28 @@ kendo-multiselect.text-color-multi-tag.divineo-one:hover .k-multiselect-wrap {
 kendo-multiselect.text-color-multi-tag.divineo-one kendo-taglist li span.k-icon {
     font-family: "WebComponentsIcons" !important;
 }
+kendo-combobox.focus-align-combo-box:focus, kendo-combobox.focus-align-combo-box:focus-within {
+    background-color: #fff;
+    border-color: #f5f5f5;
+    box-shadow: 0 2px 6px rgb(0 0 0 / 20%), 0 2px 3px rgb(0 0 0 / 5%);
+}
+
+kendo-combobox.focus-align-combo-box span.k-state-focused .k-icon {
+    color: var(--light-blue) !important;
+}
+
+kendo-combobox.focus-align-combo-box span.k-state-focused span.k-icon.k-clear-value.k-i-close {
+    font-size: 12px;
+}
+kendo-combobox.contract-details-customer.align-text-combo-box span.k-select .k-icon {
+    padding-top: 0 !important;
+}
+kendo-combobox.contract-details-customer.align-text-combo-box .k-icon.k-clear-value {
+    padding-top: 0 !important;
+    width: 15px !important;
+    height: 15px !important;
+    top: 11px;
+}
+kendo-combobox.contract-details-customer.align-text-combo-box.closed-alignment-fixes .k-icon.k-clear-value {
+    top: 0;
+}
